[gd_scene load_steps=5 format=3 uid="uid://cqgvgmh5o8l2d"]

[ext_resource type="Script" uid="uid://ql1jpqgspoc8" path="res://main/map/overworld/house.gd" id="1_g835h"]
[ext_resource type="Texture2D" uid="uid://bwf4kbj6jrnyx" path="res://assets/overworld/house/roof.png" id="2_pavx1"]
[ext_resource type="Texture2D" uid="uid://d3ux56vcgshuy" path="res://assets/overworld/house/walls.png" id="3_jn3ko"]
[ext_resource type="Texture2D" uid="uid://bveru4lfk4sek" path="res://assets/overworld/house/frame.png" id="4_xx21e"]

[node name="House" type="Node2D"]
scale = Vector2(1.3, 1.3)
script = ExtResource("1_g835h")

[node name="RoofColor" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(2, -41)
texture = ExtResource("2_pavx1")

[node name="WallColor" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(-1, -18)
texture = ExtResource("3_jn3ko")

[node name="HouseSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -25)
texture = ExtResource("4_xx21e")

[node name="Label" type="RichTextLabel" parent="."]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -126.0
offset_top = -94.0
offset_right = 128.0
offset_bottom = -49.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 24
text = "6"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -35.0
offset_top = -93.0
offset_right = 40.0
offset_bottom = -1.0

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
